// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label actions: should add labels 1`] = `
Immutable.Map {
  1: Immutable.Map {
    id: 1,
    color: "#ffffff",
    text: "Inbox",
  },
  2: Immutable.Map {
    id: 2,
    color: "#ffffff",
    text: "Sent",
  },
  3: Immutable.Map {
    id: 3,
    color: "#ffffff",
    text: "Spam",
  },
  4: Immutable.Map {
    id: 4,
    color: "#ffffff",
    text: "Trash",
  },
  5: Immutable.Map {
    id: 5,
    color: "#ffffff",
    text: "Draft",
  },
  6: Immutable.Map {
    id: 6,
    color: "#ffffff",
    text: "Important",
  },
  7: Immutable.Map {
    id: 7,
    color: "#ffffff",
    text: "Starred",
  },
  10: Immutable.Map {
    id: 10,
    color: "#ffffff",
    text: "Text 1",
  },
}
`;

exports[`Label actions: should update label: color 1`] = `
Immutable.Map {
  1: Immutable.Map {
    id: 1,
    color: "#000000",
    text: "Inbox",
    badge: 1,
    visible: undefined,
  },
}
`;

exports[`Label actions: should update label: text 1`] = `
Immutable.Map {
  1: Immutable.Map {
    id: 1,
    color: "#ffffff",
    text: "labelmodified",
    badge: 1,
    visible: undefined,
  },
}
`;

exports[`Label actions: should update label: text and color 1`] = `
Immutable.Map {
  1: Immutable.Map {
    id: 1,
    color: "#000000",
    text: "labelmodified",
    badge: 1,
    visible: undefined,
  },
}
`;
